test/tests/stages/16_characters_and_strings/valid/extra_credit/switch_on_char_const.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[37]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const char('x')
  )
  {
  case
  const int(1)
  :
  return
  const int(1)
  ;
  case
  const int(2)
  :
  return
  const int(2)
  ;
  case
  const int(120)
  :
  return
  const int(0)
  ;
  default
  :
  return
  -
  const int(1)
  ;
  }
  }
