test/tests/stages/16_characters_and_strings/invalid_labels/extra_credit/duplicate_case_char_const.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(i)
  =
  const int(120)
  ;
  switch
  (
  identifier(i)
  )
  {
  case
  const char('x')
  :
  return
  const int(1)
  ;
  case
  const int(120)
  :
  return
  const int(2)
  ;
  default
  :
  return
  const int(3)
  ;
  }
  }
